package it.unibo.oops.model;

public abstract class Item {

}
