package it.unibo.oops.model;

public class Weapon {

}
